--- a/Optocounter/pom.xml
+++ b/Optocounter/pom.xml
@@ -71,6 +71,12 @@
 			<groupId>org.vaadin.addons</groupId>
 			<artifactId>canvas</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>
+				spring-boot-starter-data-elasticsearch
+			</artifactId>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
